Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53059

[OSX] Using Location services in demobrowser crashes with assert

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.6.1
    • 5.6.0, 5.7
    • Location, WebEngine
    • None
    • OSX 10.11.4
    • macOS
    • cc02a7a580968125717fe682c738a2dfc7adc471

      1) Open Demobrowser
      2) Go to http://html5demos.com/geo
      3) Allow to use geolocation
      4) Crash

      Stack trace:

      ASSERT: "m_positionInfoSource->error() == QGeoPositionInfoSource::NoError" in file /Users/alex/Dev/qt/qt57v2_source/qtwebengine/src/core/location_provider_qt.cpp, line 161
      
      1  __pthread_kill                                                                                                                                                                                                                                                                                                                                    0x7fff8b726f06 
      2  pthread_kill                                                                                                                                                                                                                                                                                                                                      0x7fff9d0874ec 
      3  abort                                                                                                                                                                                                                                                                                                                                             0x7fff9f2c56e7 
      4  qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&)                                                                                                                                                                                                                                        qlogging.cpp                   1613 0x11ef42ab8    
      5  QMessageLogger::fatal(const char *, ...) const                                                                                                                                                                                                                                                                qlogging.cpp                   787  0x11ef44dde    
      6  qt_assert(const char *, const char *, int)                                                                                                                                                                                                                                                                    qglobal.cpp                    3061 0x11ef3af82    
      7  QtWebEngineCore::QtPositioningHelper::updatePosition(QGeoPositionInfo const&)                                                                                                                                                                                                                                 location_provider_qt.cpp       161  0x1004ef406    
      8  QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QGeoPositionInfo const&>, void, void (QtWebEngineCore::QtPositioningHelper:: *)(QGeoPositionInfo const&)>::call(void (QtWebEngineCore::QtPositioningHelper:: *)(QGeoPositionInfo const&), QtWebEngineCore::QtPositioningHelper *, void * *) qobjectdefs_impl.h             507  0x1004f1653    
      9  void QtPrivate::FunctionPointer<void (QtWebEngineCore::QtPositioningHelper:: *)(QGeoPositionInfo const&)>::call<QtPrivate::List<QGeoPositionInfo const&>, void>(void (QtWebEngineCore::QtPositioningHelper:: *)(QGeoPositionInfo const&), QtWebEngineCore::QtPositioningHelper *, void * *)                   qobjectdefs_impl.h             526  0x1004f154e    
      10 QtPrivate::QSlotObject<void (QtWebEngineCore::QtPositioningHelper:: *)(QGeoPositionInfo const&), QtPrivate::List<QGeoPositionInfo const&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                        qobject_impl.h                 149  0x1004f1424    
      11 QtPrivate::QSlotObjectBase::call(QObject *, void * *)                                                                                                                                                                                                                                                         qobject_impl.h                 130  0x11f28e056    
      12 QMetaObject::activate(QObject *, int, int, void * *)                                                                                                                                                                                                                                                          qobject.cpp                    3720 0x11f289a0c    
      13 QMetaObject::activate(QObject *, QMetaObject const *, int, void * *)                                                                                                                                                                                                                                          qobject.cpp                    3602 0x11f28906d    
      14 QGeoPositionInfoSource::positionUpdated(QGeoPositionInfo const&)                                                                                                                                                                                                                                              moc_qgeopositioninfosource.cpp 240  0x11ee977ca    
      15 QGeoPositionInfoSourceCL::locationDataAvailable(QGeoPositionInfo)                                                                                                                                                                                                                                             qgeopositioninfosource_cl.mm   238  0x1315e9aeb    
      16 -[PositionLocationDelegate locationManager:didUpdateToLocation:fromLocation:]                                                                                                                                                                                                                                 qgeopositioninfosource_cl.mm   91   0x1315e9a4d    
      17 ___lldb_unnamed_function220$$CoreLocation                                                                                                                                                                                                                                                                                                         0x7fff8b5ce225 
      18 ___lldb_unnamed_function19$$CoreLocation                                                                                                                                                                                                                                                                                                          0x7fff8b5c5bc7 
      19 __CFRUNLOOP_IS_CALLING_OUT_TO_A_BLOCK__                                                                                                                                                                                                                                                                                                           0x7fff90f174ac 
      20 __CFRunLoopDoBlocks                                                                                                                                                                                                                                                                                                                               0x7fff90ef6d05 
      21 __CFRunLoopRun                                                                                                                                                                                                                                                                                                                                    0x7fff90ef6a6b 
      22 CFRunLoopRunSpecific                                                                                                                                                                                                                                                                                                                              0x7fff90ef5ed8 
      23 RunCurrentEventLoopInMode                                                                                                                                                                                                                                                                                                                         0x7fff8bb00935 
      24 ReceiveNextEventCommon                                                                                                                                                                                                                                                                                                                            0x7fff8bb0076f 
      25 _BlockUntilNextEventMatchingListInModeWithFilter                                                                                                                                                                                                                                                                                                  0x7fff8bb005af 
      26 _DPSNextEvent                                                                                                                                                                                                                                                                                                                                     0x7fff8d8f0efa 
      27 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:]                                                                                                                                                                                                                                                                            0x7fff8d8f032a 
      28 -[NSApplication run]                                                                                                                                                                                                                                                                                                                              0x7fff8d8e4e84 
      29 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                   qcocoaeventdispatcher.mm       422  0x12614d116    
      30 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                              qeventloop.cpp                 134  0x11f22e34a    
      31 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                                       qeventloop.cpp                 210  0x11f22e566    
      32 QCoreApplication::exec()                                                                                                                                                                                                                                                                                      qcoreapplication.cpp           1260 0x11f233b44    
      33 QGuiApplication::exec()                                                                                                                                                                                                                                                                                       qguiapplication.cpp            1633 0x11d280496    
      34 QApplication::exec()                                                                                                                                                                                                                                                                                          qapplication.cpp               2972 0x11c4709e9    
      35 main                                                                                                                                                                                                                                                                                                          main.cpp                       63   0x100052905    
      36 start                                                                                                                                                                                                                                                                                                                                             0x100004e64    
      

      Assert is caused by incorrect initialized value in qgeopositioninfosource_cl.mm -> QGeoPositionInfoSourceCL constructor,
      m_positionError is set to QGeoPositionInfoSource::UnknownSourceError.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes