A new QGeoPositionInfoSourceCL should be initialized with NoError.

Change-Id: Ide4ccacd9d7d6a8fe86d190723fcd94ddab9f6d6
Task-number: QTBUG-53059
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>